--- a/Plots.Rmd
+++ b/Plots.Rmd
@@ -15,13 +15,22 @@ library(ggpubr)
 
 # Set directory
 ```{r}
-setwd("C:\\Users\\")
+setwd("C:\\Users\\Zuffo\\Desktop\\Leandro\\Artigo\\Analises\\chuva")
 ```
 
 # Read Data
 ```{r}
 graf <- read.table("graf.txt", header = TRUE) 
+head(graf)
 ```
+ HYB       PG1      PG2   EUtN1   EUtN2    NHI1    NHI2     NT1     NT2   RemE2   RemN2
+  1   89.5599   552.61  0.7964 -1.0056  0.0036  0.0072  0.0689 10.3621  1.1062  5.9042
+  2   94.0828  1005.64  3.0284  0.3601  0.0052  0.0012 -1.5496 11.6479  0.5161  4.9608
+  3 -836.0632 -1989.77 -7.8991 -6.4561 -0.0151 -0.0410 -0.6968 -9.4959 -2.4976 -4.9427
+  4   16.7510   937.73  0.9275 -1.3031 -0.0016  0.0177 -0.7104 17.4468  0.8173  4.1723
+  5  142.6094  1318.51  1.6648 -0.5860  0.0106  0.0004 -0.0970 25.8645  0.2331  6.0192
+  6  179.3591   -20.10  5.3255 -3.5659  0.0264  0.0193 -0.9669  8.7266 -0.2445 -2.8781
+
 
 # Set traits
 ```{r}
