--- a/HeatMap.Rmd
+++ b/HeatMap.Rmd
@@ -12,7 +12,7 @@ library(Hmisc)
 
 # Directory
 ```{r}
-setwd("C:\\Users\\Zuffo\\Desktop\\Leandro\\Artigo\\Analises\\Correlaçao")
+setwd("C:\\Users\\")
 ```
 
 # Read data
@@ -35,10 +35,27 @@ corB
 ```{r}
 cormat <- as.matrix(read.table("cormats.txt", header = T)) 
 head(cormat)
+```
+      SNCS  SNCM   GNC  NUPs   SNS   SNM  NCG  TNM  NUtE   NHI  Nrem NRE  SPAD   DTS    GY
+SNCS  0.10  0.61  0.43 -0.30  0.49  0.18 0.30 0.30 -0.39  0.14  0.56   0  0.58 -0.29  0.03
+SNCM  0.21  0.18  0.40  0.08  0.34  0.59 0.36 0.49 -0.55 -0.30  0.08   0  0.38 -0.11  0.11
+GNC   0.10  0.43  0.41  0.06  0.36  0.29 0.49 0.47 -0.85  0.17  0.32   0  0.39  0.05 -0.15
+NUPs -0.44  0.20  0.38  0.20 -0.52 -0.20 0.30 0.15  0.16  0.51 -0.62   0 -0.05  0.00  0.29
+SNS   0.43 -0.14 -0.10 -0.69  0.29  0.79 0.60 0.74 -0.51 -0.33  0.90   0  0.22  0.03  0.42
+SNM   0.20  0.54  0.22 -0.30  0.67  0.26 0.57 0.78 -0.56 -0.61  0.46   0  0.05  0.19  0.42
 
+
+```{r}
 melted_cormat <- melt(cormat)
 head(melted_cormat)
 ```
+1 Var2 value
+1 SNCS SNCS  0.10
+2 SNCM SNCS  0.21
+3  GNC SNCS  0.10
+4 NUPs SNCS -0.44
+5  SNS SNCS  0.43
+6  SNM SNCS  0.20
 
 # Create HeatMap
 ```{r}
