--- a/Clima.Rmd
+++ b/Clima.Rmd
@@ -1,16 +1,11 @@
----
-title: "Clima"
-output:
-  pdf_document: default
-  html_document: default
----
+# Climatic Conditions
 
-# Packages
+## Packages
 ```{r}
 library(latticeExtra)
 ```
 
-# Set directory
+## Set directory
 ```{r}
 setwd("C:\\Users\\")
 ```
@@ -21,7 +16,7 @@ setwd("C:\\Users\\")
 dados <- read.table("climas.txt", header = T) # Ler tabela
 ```
 
-# First lines
+## First lines
 ```{r}
 head(dados)
 ```
@@ -33,7 +28,7 @@ head(dados)
 2015/2016   Oct   5 21.91250 20.91250   0.0
 2015/2016   Oct   6 20.29583 18.99583   0.0
 
-# Last lines
+## Last lines
 ```{r}
 tail(dados)
 ```
@@ -45,7 +40,7 @@ tail(dados)
 2016/2017   Apr 211 17.80833 17.37917   0.0
 2016/2017   Apr 212 18.09583 17.38333   0.2
 
-# Prepare Data
+## Data
 ```{r}
 max <- dados$max
 min <- dados$min
@@ -54,12 +49,12 @@ y_range <- range(0, max, min) # determinar eixo Y
 x_range <- range(0:212) # determinar eixo X
 ```
 
-# Plot type
+## Plot type
 ```{r}
 png("arr.png", res=600, width=40, height=20, units="cm")
 ```
 
-# Plot temperature graph
+## Plot temperature graph
 ```{r}
 g1 <- xyplot(min + max ~ day| year , data = dados, type = "l", xlim = x_range, ylim = y_range, 
            lty = 1, lwd = 0.6, ylab = list(label = "Temperature (C°)", cex = 1.3), ylab.right = list(label = "Rainfall (mm)", cex = 1.3),
@@ -69,31 +64,31 @@ g1 <- xyplot(min + max ~ day| year , data = dados, type = "l", xlim = x_range, y
 
 ```
 
-# Plot arrows
+## Plot arrows
 ```{r}
 g2 <- g1 + layer(panel.arrows(112,15,112,20, col = "red", code = 1, lwd = 2),
                 panel.arrows(172,15,172,20, col = "blue", code = 1, lwd = 2),
                 panel.arrows(40,15,40,20, col = "black", code = 1, lwd = 2))
 ```
 
-# Plot rainfall graph
+## Plot rainfall graph
 ```{r}
 g3<-xyplot(prec ~ day| year , data = dados, type ="h",col="black",lwd=2)
 ```
 
-# Join graphs
+## Join graphs
 ```{r}
 graph <- doubleYScale(g2, g3, style1 = 0, style2 = 0,
                     text = c("Minimun Temperature", "Maximun Temperature", "Rainfall"), columns = 3)
 ```
 
-# Graph colors
+## Graph colors
 ```{r}
 update(trellis.last.object(),
        par.settings = simpleTheme(col = c("blue", "red", "black")))
 ```
 
-# Save graph
+## Save graph
 ```{r}
 dev.off()
 ```
