--- a/Plots.Rmd
+++ b/Plots.Rmd
@@ -1,9 +1,6 @@
----
-title: "Plots"
-output: html_document
----
+# Scatterplots
 
-# Packages
+## Packages
 ```{r}
 library(ggplot2)
 library(ggrepel)
@@ -13,12 +10,12 @@ library(gridExtra)
 library(ggpubr)
 ```
 
-# Set directory
+## Set directory
 ```{r}
 setwd("C:\\Users\\")
 ```
 
-# Read Data
+## Read Data
 ```{r}
 graf <- read.table("graf.txt", header = TRUE) 
 head(graf)
@@ -32,7 +29,7 @@ head(graf)
   6  179.3591   -20.10  5.3255 -3.5659  0.0264  0.0193 -0.9669  8.7266 -0.2445 -2.8781
 
 
-# Set traits
+## Set traits
 ```{r}
 PG1<-graf$PG1
 PG2<-graf$PG2
@@ -46,7 +43,7 @@ RemE2<-graf$RemE2
 RemN2<-graf$RemN2
 ```
 
-# Graph GY x GY
+## Graph GY x GY
 ```{r}
 g1 <- ggplot(graf,
 	aes(PG1, PG2, label = as.character(HYB))) + # Dados do grafico e nomes dos pontos
@@ -64,12 +61,12 @@ g1 <- ggplot(graf,
 
 ```
 
-# Save graph
+## Save graph
 ```{r}
 ggsave("GYxGY1.png", dpi = 600, width = 30, height = 30, units = "cm")
 ```
 
-# Graph NHI x NHI
+## Graph NHI x NHI
 ```{r}
 g2 <- ggplot(graf,
 	aes(NHI1, NHI2, label = as.character(HYB))) +
@@ -81,7 +78,7 @@ g2 <- ggplot(graf,
 	axis.text.x = element_text(size=10), axis.text.y = element_text(size = 10))
 ```
 
-# Graph NUtE x NUtE
+## Graph NUtE x NUtE
 ```{r}
 g3 <- ggplot(graf,
 	aes(EUTN1, EUTN2, label = as.character(HYB))) +
@@ -93,7 +90,7 @@ g3 <- ggplot(graf,
 	axis.text.x = element_text(size = 10), axis.text.y = element_text(size = 10))
 ```
 
-# Graph GY x NUtE LN
+## Graph GY x NUtE LN
 ```{r}
 g4 <- ggplot(graf,
 	aes(PG1, EUTN1, label = as.character(HYB))) + 
@@ -105,7 +102,7 @@ g4 <- ggplot(graf,
 	axis.text.x = element_text(size = 10), axis.text.y = element_text(size = 10))
 ```
 
-# Graph GY x NUtE HN
+## Graph GY x NUtE HN
 ```{r}
 g5 <- ggplot(graf,
 	aes(EUTN2, PG2, label = as.character(HYB))) +
@@ -117,7 +114,7 @@ g5 <- ggplot(graf,
 	axis.text.x = element_text(size = 10), axis.text.y = element_text(size = 10))
 ```
 
-# Graph NUtE x NRem HN
+## Graph NUtE x NRem HN
 ```{r}
 g6 <- ggplot(graf,
 	aes(EUTN2, RemN2, label = as.character(HYB))) +
@@ -129,7 +126,7 @@ g6 <- ggplot(graf,
 	axis.text.x = element_text(size=10), axis.text.y = element_text(size = 10))
 ```
 
-# Graph NUtE x NUpT HN
+## Graph NUtE x NUpT HN
 ```{r}
 g7 <- ggplot(graf,
 	aes(EUTN2, NT2, label = as.character(HYB))) +
@@ -141,7 +138,7 @@ g7 <- ggplot(graf,
 	axis.text.x = element_text(size = 10), axis.text.y = element_text(size = 10))
 ```
 
-# Graph NUpT x NRem HN
+## Graph NUpT x NRem HN
 ```{r}
 g8 <- ggplot(graf,
 	aes(NT2, RemN2, label = as.character(HYB))) +
@@ -153,12 +150,12 @@ g8 <- ggplot(graf,
 	axis.text.x = element_text(size = 10), axis.text.y = element_text(size = 10))
 ```
 
-# Plot several graphs
+## Plot several graphs
 ```{r}
 figure <- plot_grid(g5, g6, g7, labels = "AUTO", ncol = 1, nrow = 3) # Alinhados em 1 coluna e 3 linhas
 ```
 
-# Save
+## Save
 ```{r}
 ggsave("figur2.png", dpi = 600, width = 15, height = 30, units = "cm") 
 ```
